--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!--app-header></app-header>-->
 
 <!--<app-top-bar>Eswatini Property Review</app-top-bar>-->
 
@@ -8,4 +8,4 @@
 </div>
 
 <!-- footer -->
-    <app-footer></app-footer>
+<!-- <app-footer></app-footer>-->
